Construção da interface Web e Coordenadas automáticas

--- a/web/src/Sidebar.css
+++ b/web/src/Sidebar.css
@@ -58,6 +58,7 @@ aside form button[type=submit] {
     font-size: bold;
     color: #fff;
     cursor: pointer;
+    transition: background 0.5s;
 }
 
 aside form button[type=submit]:hover {
